# Platform_demo

./: CMakeLists.txt  conf.h  main.cpp
FFT/: libfftw3-3.lib  libfftw3f-3.lib  libfftw3l-3.lib
Instrument/: KSVisa_33622A.cpp  KSVisa_33622A.h  KSVisa_34460A.cpp  KSVisa_34460A.h  KeySightVisa_N9040B.cpp  KeySightVisa_N9040B.h  RhodeSchwarzVisa_SMA100B.cpp  RhodeSchwarzVisa_SMA100B.h  TCPInstrument.cpp  TCPInstrument.h
Visa/include/: visa.h  visatype.h
Visa/lib/: visa32.lib
resources/: resources.qrc
resources/qss/: QSpinBox.qss
resources/qss/themes/: MacOS.qss
thread/: CaculateParams.cpp  CaculateParams.h  InstrumentSourceManager.cpp  InstrumentSourceManager.h  ThreadPool.cpp  ThreadPool.h  testdata.h  udpworker.cpp  udpworker.h
ui/: BaseChartWidget.cpp  BaseChartWidget.h  ChartControlWidget.cpp  ChartControlWidget.h  ChartWidget.cpp  ChartWidget.h  ChartWidgetsManager.cpp  ChartWidgetsManager.h  ConnectSettings.cpp  ConnectSettings.h  Cursor.cpp  Cursor.h  DraggableRectItem.cpp  DraggableRectItem.h  MarkerColorAction.cpp  MarkerColorAction.h  NavigationChartView.h  NewChart.h  SpectrumChartTryWidget.cpp  SpectrumChartTryWidget.h  SpectrumChartWidget.cpp  SpectrumChartWidget.h  callout.cpp  callout.h  platform_demo_test.cpp  platform_demo_test.h  platform_demo_test.ui  ui_platform_demo_test.h
